[metadata]
name = cara_sample_module
version = 0.0.1
author = BroutonLab
author_email = caracal@broutonlab.com
description = A small example package
url = https://gitlab.com/snusmumr/cara-sample-module

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = declaration
    = implementation
packages = find:
python_requires = >=3.7